# openagent_backend

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_REVIEW.md  BACKEND_ARCHITECTURE.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  QUICK_START.md  README.md  RESTORED_FEATURES.md  docker-compose.yml  main.py  processor_optimizations.md  processor_state_machine_validation.md  pyproject.toml  requirements.txt  simple_test.py  test_critical_analysis_integration.py  test_examples.md  test_llm.py  test_log_consistency.py  test_parallel_search.py  test_thinking.py
.old_engines_backup/: engine.py  opencode_engine.py
Architecture_Refactoring_Toolkit/: 00_workflow_guide.md  01_dev_environment_and_build_manifest.md  04_api_contract_and_interface_definition.md  05_legacy_test_coverage_and_strategy.md  06_architecture_and_design_document.md  07_data_schema_and_migration_plan.md  09_module_specification_and_tests.md
Architecture_Refactoring_Toolkit/project_docs/: 01_dev_environment_and_build_manifest.md  02_project_structure_guide.md  03_file_dependencies_template.md  04_api_contract_and_interface_definition.md  06_architecture_and_design_document.md  07_deep_research_sequential_flow.md  11_processing_mode_state_machines.md  unified_python_architecture.md
backup/old_core/: enhanced_engine.py  unified_final_engine.py
backup/old_utils/: logger.py  unified_logger.py
config/: a2a_agents.yaml  cognitive_features.yaml  mcp_servers.yaml
data/cost/: usage_2026-02-09.jsonl
deploy/: docker-compose.yml
deploy/backend/: Dockerfile
deploy/sandbox/: Dockerfile  build.ps1  build.sh  runner.py
docker/: Dockerfile  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/sandbox/: Dockerfile  build.ps1  build.sh  runner.py
docs/: CHANGELOG.md  CITATION_STATISTICS_ENHANCEMENT.md  CITATION_STATS_QUICKSTART.md  CODE_AUDIT_REPORT.md  COMPARISON.md  CONTRIBUTING.md  EXA_INTEGRATION.md  EXTENSION_REFACTORING_WBS.md  FAQ.md  PERFORMANCE.md  PROMPTS_100_PERCENT_INTEGRATION.md  PROMPTS_INTEGRATION_REPORT.md  PROMPTS_USAGE_REPORT.md  QUICK_START.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_WBS copy.md  REFACTORING_WBS.md  REFACTORING_WBS_V2_LINUS.md  ROADMAP.md  SECURITY.md  integration_guide_mcp.md
examples/: README.md  code_sandbox.py  multi_provider.py  simple_chat.py
plugins/: PLUGIN_DEV_GUIDE.md
scripts/: measure_kv_cache.py
src/: config.py  main.py  main_refactored.py
tests/: README.md  SKIP_TESTS.md  TEST_CLEANUP_REPORT.md  __init__.py  conftest.py  requirements-test.txt  test_all_modes.py  test_code_fix.py  test_deep_research.py  test_enhanced_research.py  test_examples.md  test_llm_logging.py  test_log_consistency.py  test_main.py  test_reference_categorization.py  test_thinking.py  test_thinking_v2.py
(+214 files in other folders)
