[project]
name = "opencode-platform"
version = "1.1.0"
description = "OpenCode-Centric Intelligent Platform - 企業級自主代理系統"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Team"}
]
keywords = ["ai", "agent", "rag", "mcp", "llm", "orchestrator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Async
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",

    # CLI/TUI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.40.0",

    # AI/LLM
    "openai>=1.0.0",
    "cohere>=5.0.0",

    # Vector DB
    "qdrant-client>=1.7.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",

    # Storage
    "redis>=5.0.0",
    "asyncpg>=0.29.0",

    # Web Framework
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",

    # MCP
    "mcp>=1.0.0",

    # Knowledge/OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
# LLM 供應商（備援鏈）
anthropic = ["anthropic>=0.34.0"]
google = ["google-genai>=0.3.0"]
# 知識庫進階
docling = ["docling>=2.0.0"]
knowledge = [
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]
# EasyOCR (pytesseract fallback, pulls PyTorch ~2GB)
easyocr = ["easyocr>=1.7.0"]
# Docker sandbox
docker = ["docker>=6.1.0"]
# 生產環境（全部功能）
production = [
    "opencode-platform[anthropic,google,knowledge]",
]
# 完整安裝（生產 + 開發 + easyocr）
all = [
    "opencode-platform[production,dev,easyocr]",
]

[project.scripts]
opencode = "opencode.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/deploy",
    "/frontend",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
